javascript toggle header logo on nav bar

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,18 +1,19 @@
-    <div class="container" id="banner" >
+<header class="header"> 
+
+   <div class="container" id="banner" >
       <div class="row"> 
  		<img src="https://www.life.illinois.edu/index/assets/UIUC_logo.png" height="60">
-		 <h1 style="color: #003366;"> School of Integrative Biology </h1>
+		 <h1 class="banner-text" > School of Integrative Biology </h1>
 	</div>
     </div>
-
 
 <!--<div class="navbar supermenu navbar-inverse navbar-fixed-top">-->
 
 <div class="navbar supermenu navbar-inverse navbar-static-top" role ="navigation" id="topnavbar" >
    <div class="container-fluid">
 
-      <div class="navbar-header">
-         <button type="button" data-toggle="collapse" data-target="#navbar-collapse-1" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#" class="navbar-brand"> School of Integrative Biology</a>
+      <div id ="logo_div" class="navbar-header" >
+         <button id ="logo_btn" type="button" data-toggle="collapse" data-target="#navbar-collapse-1" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="/ashwini" class="navbar-brand"> School of Integrative Biology</a>
       </div>
      
     <!-- Menu Item-1 -->
@@ -25,32 +26,32 @@
 		    <div class="row">
 			<ul class="col-sm-2 list-unstyled">
 			  <li><p><strong>--Title??-- </strong></p></li>
-			  <li><a href="#"> News & Events </a></li><br>
-			  <li><a href="#"> Contact Us </a></li><br>
-			  <li><a href="#"> IB Blog </a></li><br>
+			  <li><a  href="#"> News & Events </a></li><br>
+			  <li><a   href="#"> Contact Us </a></li><br>
+			  <li><a  href="#"> IB Blog </a></li><br>
 			</ul>
 
 			<ul class="col-sm-2 list-unstyled">
 			  <li class="column-width"><p><strong>People</strong></p></li>
-			  <li class="column-width" ><a href="#"> Faculty </a></li><br>
-			  <li class="column-width" ><a href="#"> Staff </a></li><br>
-			  <li class="column-width" ><a href="#"> Academics </a></li><br>
-			  <li class="column-width" ><a href="#"> Graduate Students </a></li><br>
+			  <li class="column-width" ><a  href="#"> Faculty </a></li><br>
+			  <li class="column-width" ><a  href="#"> Staff </a></li><br>
+			  <li class="column-width" ><a  href="#"> Academics </a></li><br>
+			  <li class="column-width" ><a  href="#"> Graduate Students </a></li><br>
 			</ul>
 
 			<ul class="col-sm-2 list-unstyled">
 			  <li><p><strong>Departments</strong></p></li>
-			  <li><a href="#"> Animal Biology </a></li><br>
-			  <li><a href="#"> Entomology </a></li><br>
-			  <li><a href="#"> Plant Biology </a></li><br>
+			  <li><a  href="#"> Animal Biology </a></li><br>
+			  <li><a  href="#"> Entomology </a></li><br>
+			  <li><a  href="#"> Plant Biology </a></li><br>
 			</ul>
 
 			<ul class="col-sm-2 list-unstyled">
 			  <li class="column-width"><p><strong>Programs</strong></p></li>
-			  <li class="column-width" ><a href="#"> Program in Ecology,Evolution & Conservation Biology (PEEC) </a></li><br>
-			  <li   class="column-width" ><a href="#"> Neuroscience Program (NSC) </a></li><br>
-			  <li   class="column-width" ><a href="#"> M.S.in Teaching of Biology </a></li><br>
-			  <li   class="column-width" ><a href="#"> Online M.S.in Teaching of Biology </a></li><br>
+			  <li class="column-width" ><a  href="#"> Program in Ecology,Evolution & Conservation Biology (PEEC) </a></li><br>
+			  <li   class="column-width" ><a  href="#"> Neuroscience Program (NSC) </a></li><br>
+			  <li   class="column-width" ><a  href="#"> M.S.in Teaching of Biology </a></li><br>
+			  <li   class="column-width" ><a  href="#"> Online M.S.in Teaching of Biology </a></li><br>
 			</ul>
 		</div>
 	      </div>
@@ -70,31 +71,31 @@
 		<li>
 		  <p><strong> Advising </strong></p>
 		</li>
-		<li><a href="#"> Make an Appointment </a></li><br>
-		<li><a href="#"> Academic Assistance </a></li><br>
-		<li><a href="#"> FAQs </a></li><br>
-		<li><a href="#"> Campus Links </a></li><br>
+		<li><a  href="#"> Make an Appointment </a></li><br>
+		<li><a  href="#"> Academic Assistance </a></li><br>
+		<li><a  href="#"> FAQs </a></li><br>
+		<li><a  href="#"> Campus Links </a></li><br>
 	      </ul>
 
 	      <ul class="col-sm-2 list-unstyled">
 		<li>
 		  <p><strong> Prospective </strong></p>
 		</li>
-		<li><a href="#"> How to Declare </a></li><br>
-		<li><a href="#"> Visiting Illinois </a></li><br>
-		<li><a href="#"> FAQs </a></li><br>
-		<li><a href="#"> Visitor's Map </a></li><br>
+		<li><a  href="#"> How to Declare </a></li><br>
+		<li><a  href="#"> Visiting Illinois </a></li><br>
+		<li><a  href="#"> FAQs </a></li><br>
+		<li><a  href="#"> Visitor's Map </a></li><br>
 	      </ul>
 	     
 	      <ul class="col-sm-2 list-unstyled">
 		<li>
 		  <p><strong> Programs of Study </strong></p>
 		</li>
-		<li><a href="#"> Major in IB </a></li><br>
-		<li><a href="#"> Honors </a></li><br>
-		<li><a href="#"> Teaching in Biology </a></li><br>
-		<li><a href="#"> Minor in IB </a></li><br>
-		<li><a href="#"> Minor in Ecology & Conservation Biology </a></li><br>
+		<li><a  href="#"> Major in IB </a></li><br>
+		<li><a  href="#"> Honors </a></li><br>
+		<li><a  href="#"> Teaching in Biology </a></li><br>
+		<li><a  href="#"> Minor in IB </a></li><br>
+		<li><a  href="#"> Minor in Ecology & Conservation Biology </a></li><br>
 	       </ul>
 
 
@@ -102,10 +103,10 @@
 		<li>
 		  <p><strong>Special Programs </strong></p>
 		</li>
-		<li><a href="#"> Merit </a></li><br>
-		<li><a href="#"> IB 199-Intro to Research </a></li><br>
-		<li><a href="#"> IB 299-Bio Math </a></li><br>
-		<li><a href="#"> IB 496-BARS </a></li><br>
+		<li><a  href="#"> Merit </a></li><br>
+		<li><a  href="#"> IB 199-Intro to Research </a></li><br>
+		<li><a  href="#"> IB 299-Bio Math </a></li><br>
+		<li><a  href="#"> IB 496-BARS </a></li><br>
 	      </ul>
 
 
@@ -113,11 +114,11 @@
 		<li>
 		  <p><strong>--Title??-- </strong></p>
 		</li>
-		<li><a href="#"> Undergraduate Research </a></li><br>
-		<li><a href="#"> Guidelines </a></li><br>
-		<li><a href="#"> Support </a></li><br>
-		<li><a href="#"> Next Step </a></li><br>
-		<li><a href="#"> Convocation </a></li><br>
+		<li><a  href="#"> Undergraduate Research </a></li><br>
+		<li><a  href="#"> Guidelines </a></li><br>
+		<li><a  href="#"> Support </a></li><br>
+		<li><a  href="#"> Next Step </a></li><br>
+		<li><a  href="#"> Convocation </a></li><br>
 	      </ul>
 
 </div>
@@ -135,20 +136,20 @@
 	    <div class="row">
 	      <ul class="col-sm-2 list-unstyled">
 		<li> <p><strong>--Title??-- </strong></p></li>
-		<li><a href="#"> Grants & Awards </a></li><br>
-		<li><a href="#"> Support </a></li><br>
-		<li><a href="#"> News & Features </a></li><br>
+		<li><a  href="#"> Grants & Awards </a></li><br>
+		<li><a  href="#"> Support </a></li><br>
+		<li><a  href="#"> News & Features </a></li><br>
 	      </ul>
 
 	      <ul class="col-sm-2 list-unstyled">
 		<li> <p><strong> Department & Programs </strong></p></li>
-		<li class="column-width" ><a href="#"> Animal Biology </a></li><br>
-		<li  class="column-width"><a href="#"> Entamology </a></li><br>
-		<li  class="column-width"><a href="#"> Plant Biology </a></li><br>
-		<li  class="column-width"><a href="#"> Program in Ecology, Evolution & Conservation Biology (PEEC) </a></li><br>
-		<li  class="column-width"><a href="#"> Neuroscience Program(NSP) </a></li><br>
-		<li  class="column-width"><a href="#"> M.S.in Teaching of Biology(MST) </a></li><br>
-		<li  class="column-width"><a href="#"> Online M.S.in Teaching of Biology </a></li><br>
+		<li class="column-width" ><a  href="#"> Animal Biology </a></li><br>
+		<li  class="column-width"><a  href="#"> Entamology </a></li><br>
+		<li  class="column-width"><a  href="#"> Plant Biology </a></li><br>
+		<li  class="column-width"><a  href="#"> Program in Ecology, Evolution & Conservation Biology (PEEC) </a></li><br>
+		<li  class="column-width"><a  href="#"> Neuroscience Program(NSP) </a></li><br>
+		<li  class="column-width"><a  href="#"> M.S.in Teaching of Biology(MST) </a></li><br>
+		<li  class="column-width"><a  href="#"> Online M.S.in Teaching of Biology </a></li><br>
 	      </ul>
            </div>
          </div>
@@ -198,13 +199,5 @@
   </div>
  </div>
 </div>
-
-
- <!-- Header Image -->
-   <div class="container-fluid">
-     <div class="row">
-        <img src="<%= asset_path( 'university_of_illinois.jpg' ) %>" class="img-responsive">
-     </div>
-   </div>
-
+</header>
 
