--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -5,7 +5,7 @@
 
 /* footer
 
-Ak: Using Nesting techniques to nest attributes with the element.
+KA: Using Nesting techniques to nest attributes with the element.
 */
 
 footer {
@@ -16,7 +16,7 @@ footer {
   a {
     color: #555;
     &:hover {
-      color: #222;
+      color: #fff;
     }
   }
   small {
@@ -31,6 +31,21 @@ footer {
     }
   }
 }
+
+/*KA: href links in _header.html.erb page */
+
+header {
+  color: #777;
+  a {
+    color: #555;
+    &:hover {
+      color: #fff;
+    }
+  }
+}
+
+
+
 
 /* header
 
@@ -83,7 +98,6 @@ p {
   font-size: 1.1em;
   line-height: 1.7em;
 }
-
 
 
 /* universal */
@@ -157,9 +171,46 @@ Credits: Geedmo@yamm
 #banner {
      	padding-bottom: 15px;
 	text-align: center;
-        }
+	        }
 
 
 /*==============*/
+/* KA: Home Page News Slider */
+
+
+.item{
+    
+    text-align: center;
+    height: 400px !important;
+}
+.news_slider{
+	margin: 20px;
+}
+
+.carousel .fill {
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-size: cover;
+}
+
+
+.carousel-caption h3 {
+	a{
+	  color: white;
+	}
+}
+
+/*KA: HTMl <a> tags in news slider*/
+.links:hover, 
+.style:focus{
+    color: white;
+    background: rgba(0, 0, 0, 0.65);
+    text-decoration:none;
+
+     }
+
+/*==========================*/
+/* SIB logo */
 
 
