--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,6 +9,7 @@
             <li data-target="#newsItem" data-slide-to="1"></li>
             <li data-target="#newsItem" data-slide-to="2"></li>
         </ol>   
+
        <!-- KA: Loop through the news items and set the class for the first item as 'active' -->
        <div class="carousel-inner">
 	  <%@articles.each_with_index do |t,i|%>
@@ -43,49 +44,33 @@
     </div>
 </div>
 
-<!-- News Slider end -->
+<!-- END: News Slider loop -->
+
+<!--KA: START: Calendar events Loop-->
+
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">  </h1>
+                <h1 class="page-header" style="color:gray"> Calendar </h1>
             </div>
-            <div class="col-md-4">
-                <div class="panel panel-default">
+
+	<%@events.each do |t|%>
+            <div class="col-md-3">
+                <div class="panel panel-warning">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-check"></i> Column 1</h4>
+                        <h4 align = "center" ><i class="fa fa-fw fa-check"></i><%= (t.startDate).strftime("%A, %B %d")%></h4>
+			<h6 align = "center" ><i class="fa fa-fw fa-check"></i><%= (t.startTime).strftime("%I %p")%></h6>
                     </div>
-                    <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="#" class="btn btn-default">Learn More</a>
+                    <div class="panel-body fixed-panel">
+                        <p><%= t.titleLong %> </p>                        
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-gift"></i> Column 2</h4>
-                    </div>
-                    <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="#" class="btn btn-default">Learn More</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-compass"></i> Column 3</h4>
-                    </div>
-                    <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="#" class="btn btn-default">Learn More</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+	<%end%>
 
+	
+	</div>
 
-
-
+<!--KA: END: Calendar events loop-->
 
 
 
