--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,7 +19,7 @@
     <!-- Menu Item-1 -->
      <div id="navbar-collapse-1" class="navbar-collapse collapse">
 	<ul class="nav navbar-nav">
-	   <li class="dropdown supermenu"><a href="#" data-toggle="dropdown" class="dropdown-toggle">About<b class="caret"></b></a>
+	   <li class="dropdown supermenu"><a href="#" data-toggle="dropdown" class="dropdown-toggle">About</a>
 	     <ul class="dropdown-menu">
 	       <li>
 	          <div class="supermenu-content">
@@ -61,7 +61,7 @@
 
 
     <!-- Menu Item-2 -->
-    <li class="dropdown supermenu "><a href="#" data-toggle="dropdown" class="dropdown-toggle">Undergraduate <b class="caret"></b></a>
+    <li class="dropdown supermenu "><a href="#" data-toggle="dropdown" class="dropdown-toggle">Undergraduate</a>
       <ul class="dropdown-menu">
 	<li>
 	   <div class="supermenu-content">
@@ -129,7 +129,7 @@
 
 
     <!-- Menu Item-3 -->
-    <li class="dropdown supermenu"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Graduate <b class="caret"></b></a>
+    <li class="dropdown supermenu"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Graduate</a>
       <ul class="dropdown-menu">
 	<li>
 	   <div class="supermenu-content">
@@ -159,7 +159,7 @@
 
 
     <!-- Menu Item-4 -->
-    <li class="dropdown supermenu"><a href="#" data-toggle="dropdown" class="dropdown-toggle">KA Layout Samples <b class="caret"></b></a>
+    <li class="dropdown supermenu"><a href="#" data-toggle="dropdown" class="dropdown-toggle">KA Layout Samples</b></a>
       <ul class="dropdown-menu">
 	<li>
 	   <div class="supermenu-content">
