--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -180,7 +180,6 @@ ul.nav li.dropdown:hover > ul.dropdown-menu {
 /*==============*/
 /* KA: Home Page News Slider */
 
-
 .item{
     
     text-align: center;
@@ -190,6 +189,8 @@ ul.nav li.dropdown:hover > ul.dropdown-menu {
 	margin: 20px;
 }
 
+/*====================*/
+/* KA: Carousel controls */
 .carousel .fill {
     width: 100%;
     height: 100%;
@@ -197,12 +198,24 @@ ul.nav li.dropdown:hover > ul.dropdown-menu {
     background-size: cover;
 }
 
-
 .carousel-caption h3 {
 	a{
 	  color: white;
 	}
 }
+
+.carousel-control.left, .carousel-control.right{
+	background: none !important;
+}
+
+.carousel .carousel-control {
+  visibility: hidden;
+}
+.carousel:hover .carousel-control {
+  visibility: visible;
+}
+
+/*====================*/
 
 /*KA: HTMl <a> tags in news slider*/
 .links:hover, 
@@ -214,7 +227,7 @@ ul.nav li.dropdown:hover > ul.dropdown-menu {
      }
 
 /*==========================*/
-/* Fixed panel */
+/* Fixed panel for calendar*/
 
  .fixed-panel {
              	height: 150px;
