--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,7 +19,7 @@
     <!-- Menu Item-1 -->
      <div id="navbar-collapse-1" class="navbar-collapse collapse">
 	<ul class="nav navbar-nav">
-	   <li class="dropdown supermenu"><a href="#" data-toggle="dropdown" class="dropdown-toggle">About</a>
+	   <li class="dropdown supermenu" id = "navitem1"><a href="#" data-toggle="dropdown" class="dropdown-toggle">About</a>
 	     <ul class="dropdown-menu">
 	       <li>
 	          <div class="supermenu-content">
