--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -45,6 +45,10 @@
 </div>
 
 <!-- END: News Slider loop -->
+            <div class="col-lg-12">
+		<h4 style="text-align: center;"><%= link_to "See All News", newslist_path %></h4></p>
+            </div>
+
 
 <!--KA: START: Calendar events Loop-->
 
