--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -76,13 +76,10 @@ p {
 }
 
 
-
-
-
 /* universal */
 
 body {
-  padding-top: 20px;
+  padding-top: 0px;
 }
 
 section {
@@ -122,7 +119,9 @@ Credits: Geedmo@yamm
  }
 .supermenu .supermenu-content {
   padding: 20px 30px;
-  
+
+
+
  }
 .supermenu .dropdown.supermenu .dropdown-menu {
   left: 0;
@@ -210,7 +209,7 @@ Credits: Geedmo@yamm
     height: 400px !important;
 }
 .news_slider{
-	margin: 20px;
+	margin: 0px;
 }
 
 /*====================*/
@@ -257,8 +256,6 @@ Credits: Geedmo@yamm
              	height: 150px;
 				
                }
-
-
 /* KA: Left padding for 1st li in nav bar. 
 	The padding width is based on the width of SIB logo and 244px results in the least jump during the logo toggle (upon scrool up/down) on navbar
 	Note: If you decide to change the logo or its width, make sure this padding width is adjusted based on that.
@@ -289,13 +286,18 @@ Credits: Geedmo@yamm
 
 
 /*---------------------*/
+
+
+
+
+/*---------------------*/
 /* Small screen styles*/
 
 
 #navbar-collapse-1,
 #navbar-collapse-1 ul,
 #navbar-collapse-1 li,
-#navbar-collapse-1 a {  
+#navbar-collapse-1 a {
    position: relative;
 
 }
@@ -318,11 +320,12 @@ Credits: Geedmo@yamm
   font-weight: 300;
   text-shadow: 0 -1px 1px white;
   color: #404040;
- 
+
 }
+    
 
 #navbar-collapse-1 > ul > li:hover {
-  background: #e5e5e5;					    
+  background: #e5e5e5;
 /*  background: linear-gradient(#e5e5e5 0%, #f2f2f2 100%);    */
  }
 
@@ -338,24 +341,24 @@ Credits: Geedmo@yamm
 
 #navbar-collapse-1 ul ul li {
   padding: 0;
-  border-bottom: 1px solid #d4d4d4;     
+  border-bottom: 1px solid #d4d4d4;
   border-top: none;
-  background: #f7f7f7;				
-  background: linear-gradient(#f7f7f7 0%, #ececec 100%);	
+  background: #f7f7f7;
+  background: linear-gradient(#f7f7f7 0%, #ececec 100%);
   width:767px;
 
 
  display:inline-block;
  height: auto;
  max-height: 700px;
- overflow-x: hidden; 
+ overflow-x: hidden;
 
 }
 
 #navbar-collapse-1 ul ul a {
   padding: 10px 10px 10px 25px;
   display: block;
-  color: #676767;	
+  color: #676767;
   font-size: 12px;
   font-weight: normal;
 
@@ -365,14 +368,15 @@ Credits: Geedmo@yamm
   content: "»";
   position: absolute;
   left: 10px;
-  color: #e94f31;	
+  color: #e94f31;
 
 }
 
 #navbar-collapse-1 ul ul a:hover {
-    color: #e94f31;	
+    color: #e94f31;
 }
 
 /*=============================*/
-}
 
+
+}
