--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -83,47 +83,16 @@
 	    <div class="row">
 
 	      <ul class="col-sm-2 list-unstyled">
-		<li>
-		  <p><strong> Advising </strong></p>
-		</li>
-		<li><a  href="#"> Make an Appointment </a></li><br>
-		<li><a  href="#"> Academic Assistance </a></li><br>
-		<li><a  href="#"> FAQs </a></li><br>
-		<li><a  href="#"> Campus Links </a></li><br>
+		<li><strong><%= link_to "Advising", ugrad_advising_path %></strong></li>
+		<br>
+		<li><strong><%= link_to "Prospective", ugrad_prospective_path %></strong></li>
+		<br>
+		<li><strong><%= link_to "What Can I do with IB?", ugrad_options_path %></strong></li>
+		<br>
+		<li><strong><%= link_to "Programs of Study", ugrad_programs_path %></strong></li>
+		<br>
+		<li><strong><%= link_to "Special Programs", ugrad_special_programs_path %></strong></li>
 	      </ul>
-
-	      <ul class="col-sm-2 list-unstyled">
-		<li>
-		  <p><strong> Prospective </strong></p>
-		</li>
-		<li><a  href="#"> How to Declare </a></li><br>
-		<li><a  href="#"> Visiting Illinois </a></li><br>
-		<li><a  href="#"> FAQs </a></li><br>
-		<li><a  href="#"> Visitor's Map </a></li><br>
-	      </ul>
-	     
-	      <ul class="col-sm-2 list-unstyled">
-		<li>
-		  <p><strong> Programs of Study </strong></p>
-		</li>
-		<li><a  href="#"> Major in IB </a></li><br>
-		<li><a  href="#"> Honors </a></li><br>
-		<li><a  href="#"> Teaching in Biology </a></li><br>
-		<li><a  href="#"> Minor in IB </a></li><br>
-		<li><a  href="#"> Minor in Ecology & Conservation Biology </a></li><br>
-	       </ul>
-
-
-	      <ul class="col-sm-2 list-unstyled">
-		<li>
-		  <p><strong>Special Programs </strong></p>
-		</li>
-		<li><a  href="#"> Merit </a></li><br>
-		<li><a  href="#"> IB 199-Intro to Research </a></li><br>
-		<li><a  href="#"> IB 299-Bio Math </a></li><br>
-		<li><a  href="#"> IB 496-BARS </a></li><br>
-	      </ul>
-
 
 	      <ul class="col-sm-2 list-unstyled">
 		<li>
@@ -136,7 +105,9 @@
 		<li><a  href="#"> Convocation </a></li><br>
 	      </ul>
 
-</div>
+	
+	
+	</div>
           </div>
         </li>
       </ul>
