undergrad sidebar complete

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -83,15 +83,15 @@
 	    <div class="row">
 
 	      <ul class="col-sm-2 list-unstyled">
-		<li><strong><%= link_to "Advising", ugrad_advising_path %></strong></li>
+		<li><strong><%= link_to "Advising", advising_path %></strong></li>
 		<br>
-		<li><strong><%= link_to "Prospective", ugrad_prospective_path %></strong></li>
+		<li><strong><%= link_to "Prospective", prospective_path %></strong></li>
 		<br>
-		<li><strong><%= link_to "What Can I do with IB?", ugrad_options_path %></strong></li>
+		<li><strong><%= link_to "What Can I do with IB?", options_path %></strong></li>
 		<br>
-		<li><strong><%= link_to "Programs of Study", ugrad_programs_path %></strong></li>
+		<li><strong><%= link_to "Programs of Study", programs_path %></strong></li>
 		<br>
-		<li><strong><%= link_to "Special Programs", ugrad_special_programs_path %></strong></li>
+		<li><strong><%= link_to "Special Programs", special_programs_path %></strong></li>
 	      </ul>
 
 	      <ul class="col-sm-2 list-unstyled">
