--- a/local/_sidebar_ugrad.html.erb
+++ b/local/_sidebar_ugrad.html.erb
@@ -1,6 +1,6 @@
-<div id="example1">
-    <ul id="menu1" class="example_menu">
-        <li><a class="collapsed" target="_self" href="/ashwini/sample_layouts/advising">Advising</a>
+<div id="ugrad_sidebar">
+    <ul id="sidebar1" class="ugrad_menu">
+        <li><a class="collapsed" target="_self" href="/ashwini/static_pages/ugrad_advising">Advising</a>
 	  <ul>
                 <li><a href="#">FAQs</a></li>
                 <li><a href="#">Make an Appointment</a></li>
