--- a/local/sidebar.css.scss
+++ b/local/sidebar.css.scss
@@ -123,10 +123,10 @@
 }
 #sidebar_ugrad  ul ul a:hover {
   color: white;
+}
 
 
-
-
+/*
 .expand_all, .collapse_all {
     cursor: pointer;
 }
@@ -149,4 +149,7 @@ a.has_sub.collapsed + ul {
 
 .example_menu li:first-of-type ul {
     display:block;
-}}
+}
+
+*/
+
