--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -11,6 +11,23 @@
 KA: Using Nesting techniques to nest attributes with the element.
 */
 
+
+html, body{
+	background-color: #EEE;
+}
+
+
+#container {
+	//width: 960px;
+	//margin: 0 auto;
+	background:white;
+	margin-right: auto;
+	margin-left: auto;
+	max-width: 960px; 
+
+	}
+
+
 footer {
   margin-top: 45px;
   padding-top: 5px;
@@ -100,283 +117,12 @@ textarea {
 }
 
 
-/* KA: Super Menu styles 
-Credits: Geedmo@yamm
-*/
-.supermenu .nav,
-.supermenu .collapse,
-.supermenu .dropup,
-.supermenu .dropdown {
-  position: static;
- 
-}
-.supermenu .container {
-  position: relative;
-  
-}
-.supermenu .dropdown-menu {
-  left: auto;
- }
-.supermenu .supermenu-content {
-  padding: 20px 30px;
 
 
 
- }
-.supermenu .dropdown.supermenu .dropdown-menu {
-  left: 0;
-  right: 0;
-  }
 
-/*Top navbar-level 1-menu font styles  */
-.supermenu .dropdown .dropdown-toggle{
-	color: white;
-	font-size: 14px;
- &:hover{
-	background-color: white; 
-	color: black;
-	}
-      }
 
-	
 
-/* KA:Show menu options on hover */
-	ul.nav li.dropdown:hover > ul.dropdown-menu {
-    	display: block;       
-		}
 
 
-@media handheld {
-	ul.nav li.dropdown:hover > ul.dropdown-menu {
-    	display: none;       
-		}
-	}
 
-
-
-/* Navbar-level 2 - menu styes */
-.list-unstyled,
-.list-unstyled ul { min-width: 50px }
-
-
-.column-width {width: 400px }
-
-
-/*SIB logo on navbar  */
-.navbar-header .navbar-brand{
-	color: white;
-   &:hover{
-	background-color: white; 
-	color: black;
-	}
-      }
-
-/* Navbar toggle button on right */
-.navbar-toggle .icon-bar{
- 	display: block;
-	background-color: #cccccc;
-	}
-
-
-
-/*=================*/
-/* TopNav bar background color & level 2 menu heading color */
-#topnavbar {
-    margin: 0;
-    background-color: #E87722;	/* illinois orange */
-    color: #002058;		/* illinois blue */
-
-}
-#topnavbar.affix {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    
-}
-/*
-#banner {
-     	padding-bottom: 15px;
-	text-align: center;
-       }
-*/
-
-/*==============*/
-/* KA: Home Page News Slider */
-
-.item{
-    
-    text-align: center;
-    height: 400px !important;
-}
-.news_slider{
-	margin: 0px;
-}
-
-/*====================*/
-/* KA: News slider- Carousel controls */
-.carousel .fill {
-    width: 100%;
-    height: 100%;
-    background-position: center;
-    background-size: cover;
-}
-
-.carousel-caption h3 {
-	a{
-	  color: white;
-	}
-}
-
-.carousel-control.left, .carousel-control.right{
-	background: none !important;
-}
-
-.carousel .carousel-control {
-  visibility: hidden;
-}
-.carousel:hover .carousel-control {
-  visibility: visible;
-}
-
-/*====================*/
-
-/*KA: HTMl <a> tags in news slider*/
-.links:hover, 
-.style:focus{
-    color: white;
-    background: rgba(0, 0, 0, 0.65);
-    text-decoration:none;
-
-     }
-
-/*==========================*/
-/* Fixed panel for calendar*/
-
- .fixed-panel {
-             	height: 150px;
-				
-               }
-/* KA: Left padding for 1st li in nav bar. 
-	The padding width is based on the width of SIB logo and 244px results in the least jump during the logo toggle (upon scrool up/down) on navbar
-	Note: If you decide to change the logo or its width, make sure this padding width is adjusted based on that.
-*/
-	
-#navitem1{
-	padding-left: 245px;
-}
-
-
-
-/* kA: Styles for collapsed Navbar*/
-@media (max-width: 767px) {
-	/*Hide the top banner in small screens*/
-	#banner {
-		  display: none;		
-		}
-
-	/* Remove padding for 1st div */
-	#navitem1{
-		padding-left: 0px;
-	}
-
-	/* Disable menu hover on small screen*/
-	ul.nav li.dropdown:hover > ul.dropdown-menu {
-    		display: none;       
-	}
-
-
-/*---------------------*/
-
-
-
-
-/*---------------------*/
-/* Small screen styles*/
-
-
-#navbar-collapse-1,
-#navbar-collapse-1 ul,
-#navbar-collapse-1 li,
-#navbar-collapse-1 a {
-   position: relative;
-
-}
-
-/* Level 1 background*/
-#navbar-collapse-1  > ul > li{
-  background: #f6f6df;
-  background: linear-gradient(#f6f6df 0%, #f5f5dc 100%);
-  border-radius: 3px 3px 0 0;
-    }
-
-
-#navbar-collapse-1  > ul > li> a {
-  padding: 15px 10px;
-   border: none;
-  border-top: 1px solid #818176;
-  border-radius: 3px 3px 0 0;
-  text-align: center;
-  font-size: 18px;
-  font-weight: 300;
-  text-shadow: 0 -1px 1px white;
-  color: #404040;
-
-}
-    
-
-#navbar-collapse-1 > ul > li:hover {
-  background: #e5e5e5;
-/*  background: linear-gradient(#e5e5e5 0%, #f2f2f2 100%);    */
- }
-
-#navbar-collapse-1  > ul > li > a.dropdown-toggle {
-  background: url(expand.png) 96% center no-repeat;
-}
-
-#navbar-collapse-1 > ul > li.dropdown.supermenu.active > a.dropdown-toggle  {
-  background: url(collapse.png) 96% center no-repeat;
-
-}
-
-
-#navbar-collapse-1 ul ul li {
-  padding: 0;
-  border-bottom: 1px solid #d4d4d4;
-  border-top: none;
-  background: #f7f7f7;
-  background: linear-gradient(#f7f7f7 0%, #ececec 100%);
-  width:767px;
-
-
- display:inline-block;
- height: auto;
- max-height: 700px;
- overflow-x: hidden;
-
-}
-
-#navbar-collapse-1 ul ul a {
-  padding: 10px 10px 10px 25px;
-  display: block;
-  color: #676767;
-  font-size: 12px;
-  font-weight: normal;
-
-  }
-
-#navbar-collapse-1 ul ul a:before {
-  content: "»";
-  position: absolute;
-  left: 10px;
-  color: #e94f31;
-
-}
-
-#navbar-collapse-1 ul ul a:hover {
-    color: #e94f31;
-}
-
-/*=============================*/
-
-
-}
