--- a/app/views/layouts/_sidebar_ugrad_programs.html.erb
+++ b/app/views/layouts/_sidebar_ugrad_programs.html.erb
@@ -1,6 +1,6 @@
-<div id="example1">
-    <ul id="menu1" class="example_menu">
-        <li><a class="collapsed" target="_self" href="/ashwini/sample_layouts/advising">Advising</a>
+<div id="ugrad_sidebar">
+    <ul id="sidebar1" class="ugrad_menu">
+        <li><a class="collapsed" target="_self" <%= link_to "Advising", advising_path %></a>
 	  <ul>
                 <li><a href="#">FAQs</a></li>
                 <li><a href="#">Make an Appointment</a></li>
@@ -8,24 +8,24 @@
                 <li><a href="#">Campus Links</a> </li>       
             </ul>
         </li>
-        <li><a class="collapsed" href="#">Prospective</a>            
- 	    <ul>
+          <li><a class="collapsed" target="_self" <%= link_to "Prospective", prospective_path %></a>
+            <ul>
                 <li><a href="#">FAQ</a></li>
                 <li><a href="#">How to Declare</a></li>
                 <li><a href="#">Visitor’s Map</a></li>
 	   </ul>
         </li>
-  	<li><a class="expanded" href="#">What can I do with IB?</a>            
- 	    <ul>
+  	<li><a class="collapsed" target="_self" <%= link_to "What can I do with IB?", options_path %></a> 	    	  
+	   <ul>
                 <li><a href="#">Pre-Health </a></li>
                 <li><a href="#">Ecology & Conservation</a></li>
                 <li><a href="#">Organisms & Evolution</a> </li>
 		<li><a href="#">Research</a></li>
                 <li><a href="#">Teaching</a> </li>
-	   </ul>
+	   </ul>	  
 	</li>
-	<li><a class="collapsed" href="#">Programs of Study</a>            
- 	    <ul>
+	<li><a class="expanded" target="_self" <%= link_to "Programs of Study", programs_path %></a>  	    	  
+	   <ul>
                 <li><a href="#">Major in IB</a></li>
                 <li><a href="#">Honors</a></li>
                 <li><a href="#">Teaching in Biology</a> </li>
@@ -33,7 +33,7 @@
 		<li><a href="#">Minor in Ecology & Conservation Biology</a> </li>
 	   </ul>
 	 </li>
-	<li><a class="collapsed" href="#">Special Programs</a>            
+	<li><a class="collapsed" target="_self" <%= link_to "Special Programs", special_programs_path %></a>            
  	    <ul>
                 <li><a href="#">Merit</a></li>
                 <li><a href="#">IB 199-Intro to Research</a></li>
@@ -45,3 +45,5 @@
     </ul>
 
 </div>
+
+
