--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,16 +15,24 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
+<style type="text/css">
+  body {background-color: #EEE}
+</style> 
+
+
  </head>
   
  <body>
 
-     <%= render 'layouts/header' %>
-  
-   <div class="container">
-       <%= yield %>
-       <%= render 'layouts/footer' %>
-     </div>
+   <div id ="container">
+	<div id ="content">
+	   	<%= render 'layouts/header' %>  
+	       <%= yield %>
+	       <%= render 'layouts/footer' %>
+	</div>
+   </div>
+
+
   </body>
 </html>
 
